--- a/res/layout/activity_testimonios_list.xml
+++ b/res/layout/activity_testimonios_list.xml
@@ -33,7 +33,15 @@
                 android:divider="@drawable/divider_horizontal_green"
                 android:foreground="?android:windowContentOverlay"
                 android:orientation="vertical"
-                android:showDividers="middle" />
+                android:showDividers="middle" >
+                
+                <ProgressBar
+                    android:id="@+id/testimonios_list_loading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:visibility="gone" />
+            </LinearLayout>
         </ScrollView>
     </FrameLayout>
 
